# rust-by-example

./: Cargo.toml  README.md
examples/01_1 hello world/print/: debug.rs  display.rs  fmt.rs  test_list.rs
examples/02_primitives/: array.rs  literals.rs  tuples.rs
examples/03_custom_types/: c_like.rs  const.rs  enum.rs  enum_use.rs  structs.rs  testcase_linked_list.rs
examples/04_variable_bindings/: declare.rs  freeze.rs  mut.rs  scope.rs
examples/05_types/: alias.rs  cast.rs  inference.rs  literals.rs
examples/06_conversion/: from_into.rs  string.rs  try_from_try_into.rs
examples/07_expression/: expression.rs
examples/08_flow_control/: for.rs  if_else.rs  loop.rs  match.rs  while.rs
examples/08_flow_control/destructuring/: destructure_tuple.rs
examples/08_flow_control/loop/: loop_return.rs  nested.rs
