[package]
name = "rust-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[example]]
name = "debug"
path = "examples/01_1 hello world/print/debug.rs"

[[example]]
name = "display"
path = "examples/01_1 hello world/print/display.rs"

[[example]]
name = "test_list"
path = "examples/01_1 hello world/print/test_list.rs"

[[example]]
name = "fmt"
path = "examples/01_1 hello world/print/fmt.rs"

[[example]]
name = "literals"
path = "examples/02_primitives/literals.rs"

[[example]]
name = "tuples"
path = "examples/02_primitives/tuples.rs"

[[example]]
name = "array"
path = "examples/02_primitives/array.rs"

[[example]]
name = "structs"
path = "examples/03_custom_types/structs.rs"

[[example]]
name = "enum"
path = "examples/03_custom_types/enum.rs"

[[example]]
name = "enum_use"
path = "examples/03_custom_types/enum_use.rs"

[[example]]
name = "c_like"
path = "examples/03_custom_types/c_like.rs"

[[example]]
name = "testcase_linked_list"
path = "examples/03_custom_types/testcase_linked_list.rs"

[[example]]
name = "const"
path = "examples/03_custom_types/const.rs"

[[example]]
name = "mut"
path = "examples/04_variable_bindings/mut.rs"

[[example]]
name = "scope"
path = "examples/04_variable_bindings/scope.rs"

[[example]]
name = "declare"
path = "examples/04_variable_bindings/declare.rs"

[[example]]
name = "freeze"
path = "examples/04_variable_bindings/freeze.rs"